objects/SPM_Goal__c.object
<CustomObject>
    <fields>
        <fullName>Action_Date__c</fullName>
        <description>Enter Action Date</description>
        <inlineHelpText>Enter Action Date</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Goal_Complete__c</fullName>
        <description>Goal Complete</description>
        <inlineHelpText>Select Goal Complete Yes or No</inlineHelpText>
        <label>Goal Complete</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goal_ID__c</fullName>
        <description>Goal ID</description>
        <displayFormat>RG-{00000}</displayFormat>
        <inlineHelpText>Goal ID</inlineHelpText>
        <label>Goal ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Goal_Review_Coverage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Goal Review Coverage</description>
        <inlineHelpText>Goal Review Coverage</inlineHelpText>
        <label>Goal Review Coverage</label>
        <referenceTo>SPM_Review_Coverage__c</referenceTo>
        <relationshipLabel>Review Goals</relationshipLabel>
        <relationshipName>Review_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MVendor_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>MVendor ID</description>
        <inlineHelpText>MVendor ID</inlineHelpText>
        <label>MVendor ID</label>
        <referenceTo>SPM_PVendor_MVendor__c</referenceTo>
        <relationshipLabel>Review Goals</relationshipLabel>
        <relationshipName>Review_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MVendor_Name__c</fullName>
        <formula>MVendor_ID__r.PVendor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MVendor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Goal__c</fullName>
        <description>Metric Goal</description>
        <inlineHelpText>Metric Goal</inlineHelpText>
        <label>Metric Goal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric__c</fullName>
        <description>Enter Metric</description>
        <inlineHelpText>Enter Metric</inlineHelpText>
        <label>Metric</label>
        <picklist>
            <picklistValues>
                <fullName>Sales$</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IVOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CycleTime</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Program ID</description>
        <inlineHelpText>Program ID</inlineHelpText>
        <label>Program ID</label>
        <referenceTo>SPM_Account_Program__c</referenceTo>
        <relationshipLabel>Review Goals</relationshipLabel>
        <relationshipName>Review_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <formula>Goal_Review_Coverage__r.Program_ID__r.Service_Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <formula>Goal_Review_Coverage__r.Region_ID__r.SPM_Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regions_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Regions ID</description>
        <inlineHelpText>Regions ID</inlineHelpText>
        <label>Regions ID</label>
        <referenceTo>SPM_Account_Regions__c</referenceTo>
        <relationshipLabel>Review Goals</relationshipLabel>
        <relationshipName>Review_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review_Name__c</fullName>
        <description>Choose Review Name</description>
        <inlineHelpText>Choose Review Name</inlineHelpText>
        <label>Review Name</label>
        <referenceTo>SPM_Reviews__c</referenceTo>
        <relationshipLabel>Review Goals</relationshipLabel>
        <relationshipName>SPM_Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>